# runtime

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  conanfile.py  config.h.in
.github/workflows/: cmake.yml  manual.yml
include/: RuntimeAdapterIf.h  RuntimeControllerIf.h  RuntimeIf.h
include/mock/component/: RuntimeController.h
none_test_package/: CMakeLists.txt  conanfile.py
none_test_package/src/: example.cpp
src/: Plugin.cpp  Runtime.cpp  plugin.c
src/component/: RuntimeAdapter.cpp  RuntimeAdapter.h  RuntimeController.cpp  RuntimeController.h
src/components/: RuntimeAdapter.cpp  RuntimeAdapter.h
src/factory/: Factory.cpp  Factory.h  RuntimeAdapterFactory.cpp  RuntimeAdapterFactory.h  RuntimeControllerFactory.cpp  RuntimeControllerFactory.h  RuntimeFactory.cpp  RuntimeFactory.h
test/: .cproject  .gitignore  .project  CMakeLists.txt  conanfile.txt
test/dummy/copa/: FactoryController.cpp
test/src/factory/: RuntimeAdapterFactoryTest.cpp  RuntimeControllerFactoryTest.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: ComponentController.cpp  FactoryController.cpp  example.cpp
